<?xml version="1.0"?>
<package format="3">
  <name>tablet_display</name>
  <version>0.0.1</version>
  <description>Lifecycle node that displays text or images on the robot tablet.</description>

  <maintainer email="ines@example.com">Ines</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclpy_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>